[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/tank_bigRed.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Ennemi.gd" type="Script" id=2]
[ext_resource path="res://assets/explosion1.png" type="Texture" id=3]
[ext_resource path="res://assets/explosion5.png" type="Texture" id=4]
[ext_resource path="res://assets/explosion2.png" type="Texture" id=5]
[ext_resource path="res://assets/explosion3.png" type="Texture" id=6]
[ext_resource path="res://assets/explosion4.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 50, 50 )

[sub_resource type="CircleShape2D" id=2]
radius = 492.102

[sub_resource type="Animation" id=3]
resource_name = "Damage_Taken"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("body:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Death"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("body:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.301, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.5, 0.5 ), Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ), Vector2( 1.4, 1.4 ), Vector2( 1.6, 1.6 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("body:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("body:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("body:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[node name="Ennemi" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
rotation_speed = 3.0

[node name="body" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Position2D" type="Position2D" parent="body"]
position = Vector2( 0, 63 )

[node name="hitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="Detector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "START"
anims/Damage_Taken = SubResource( 3 )
anims/Death = SubResource( 4 )
anims/START = SubResource( 5 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Detector" to="." method="_on_Detector_body_entered"]
[connection signal="body_exited" from="Detector" to="." method="_on_Detector_body_exited"]
